# Slicer-ABLTemporalBoneSegmentation

./: .gitignore  CMakeLists.txt  CTestConfig.cmake  DeepLearningPreProcessModule.py  LICENSE  README.md  SuperBuild.cmake  uiTools.py
ABLTemporalBoneSegmentationModule/: ABLTemporalBoneSegmentationModule.py  CMakeLists.txt
ABLTemporalBoneSegmentationModule/Resources/Atlases/: Fiducial_L.fcsv
ABLTemporalBoneSegmentationModule/Resources/Models/: ABLTempSeg.json
Atlases/: Fiducial_R.fcsv
DeepLearningPreProcessModule/: CMakeLists.txt  DeepLearningPreProcessModule.py  InterfaceTools.py
DeepLearningPreProcessModule/Resources/Atlases/: Fiducial_R.fcsv
DeepLearningPreProcessModule/Resources/Masks/: CochleaRegistrationMask_L.nrrd  CochleaRegistrationMask_R.nrrd
DeepLearningPreProcessModule/Resources/Parameters/: Parameters_Rigid_Sumit.txt
DeepLearningPreProcessModule/Utilities/: InterfaceTools.py
IntraSampleRegistration/: CMakeLists.txt  IntraSampleRegistration.py
IntraSampleRegistration/Utilities/: InterfaceTools.py
Resources/Atlases/: Fiducial_L.fcsv
SkullThicknessMapping/: CMakeLists.txt  SkullThicknessMapping.py
SkullThicknessMapping/Resources/Sample/Images/: 1601L.hdr
SkullThicknessMapping/Resources/Sample/Shapes/: sphere.vtk
SkullThicknessMapping/Resources/Tables/: AirCellGradient.txt  ThicknessGradient.txt
SkullThicknessMappingCLI/: CMakeLists.txt  SkullThicknessMappingCLI.py
SlicerRadiomicsCLI/: SlicerRadiomicsCLI.py  SlicerRadiomicsCLI.xml
